--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-append "/ngxs" to url<br>
-<br>
-<router-outlet></router-outlet>
+<div id="container">
+    <div id="header">
+        <mat-icon [matMenuTriggerFor]="menu">menu</mat-icon>
+        <mat-menu #menu="matMenu">
+            <a mat-menu-item href="/ngxs">NgXs</a>
+        </mat-menu>
+    </div>
+
+    <router-outlet></router-outlet>
+</div>
 
