--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
         <mat-icon [matMenuTriggerFor]="menu">menu</mat-icon>
         <mat-menu #menu="matMenu">
             <a mat-menu-item href="/ngxs">NgXs</a>
+            <a mat-menu-item href="/jsonforms">JsonForms.io</a>
         </mat-menu>
     </div>
 
